2003-08-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_alloc_counter.c:
	* libop/op_events.h: minor doxgen fix

2003-08-08  John Levon  <levon@movementarian.org>

	* dae/Makefile.am:
	* dae/oprofiled.c:
	* daemon/Makefile.am:
	* daemon/oprofiled.c:
	* daemon/opd_util.h:
	* daemon/opd_util.c: share some small bits of code
	between the daemons

2003-08-08  John Levon  <levon@movementarian.org>

	* dae/oprofiled.c:
	* daemon/oprofiled.c: remove mypid, unused

2003-08-08  John Levon  <levon@movementarian.org>

	* dae/Makefile.am:
	* dae/opd_printf.h: remove duplicate header
	and use daemon/opd_printf.h

2003-08-08  John Levon  <levon@movementarian.org>

	* dae/opd_image.c:
	* dae/opd_sample_files.h:
	* dae/opd_sample_files.c:
	* daemon/opd_image.c:
	* daemon/opd_sample_files.h:
	* daemon/opd_sample_files.c: remove "create" bool
	from opd_mangle_filename(): only one callsite needs
	that functionality, open code the create instead

	* dae/opd_proc.c:
	* dae/opd_sample_files.h:
	* dae/opd_sample_files.c:
	* daemon/opd_sample_files.h:
	* daemon/opd_sample_files.c: return error from
	opd_open_sample_filename(). Do not fail when odb_open
	fails due to --reset races.

	* dae/oprofiled.c:
	* daemon/oprofiled.c: a little more verbosity.

	* libutil/op_file.h:
	* libutil/op_file.c: fix create_dir/path() comments,
	don't use access()

	* utils/opcontrol: reduce chance of --reset races

2003-08-06  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/symbol_sort.h:
	* libpp/symbol_sort.cpp: add app_name sort order, force sort order
	  for criteria unspecified by user.
	* pp/opreport_options.cpp: update --sort option help string.

2003-08-04  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/opannotate.1.in:
	* pp/opannotate.cpp:
	* pp/opannotate_options.h:
	* pp/opannotate_options.cpp: add --base-dirs

2003-08-04  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/opannotate.1.in:
	* pp/opannotate.cpp:
	* pp/opannotate_options.h: